--- a/app/src/main/res/xml/carousel_scene.xml
+++ b/app/src/main/res/xml/carousel_scene.xml
@@ -12,7 +12,7 @@
 		>
 
 		<OnSwipe app:dragDirection="dragLeft"
-			app:touchAnchorId="@id/pizza1"
+			app:touchAnchorId="@id/pizzaImg_1"
 			/>
 
 	</Transition>
@@ -24,7 +24,7 @@
 		>
 
 		<OnSwipe app:dragDirection="dragLeft"
-			app:touchAnchorId="@id/pizza2"
+			app:touchAnchorId="@id/pizzaImg_2"
 			/>
 
 	</Transition>
@@ -37,7 +37,7 @@
 		>
 
 		<OnSwipe app:dragDirection="dragRight"
-			app:touchAnchorId="@id/pizza3"
+			app:touchAnchorId="@id/pizzaImg_3"
 			/>
 
 	</Transition>
@@ -49,7 +49,7 @@
 		>
 
 		<OnSwipe app:dragDirection="dragLeft"
-			app:touchAnchorId="@id/pizza3"
+			app:touchAnchorId="@id/pizzaImg_3"
 			/>
 
 	</Transition>
@@ -62,7 +62,7 @@
 		>
 
 		<OnSwipe app:dragDirection="dragRight"
-			app:touchAnchorId="@id/pizza4"
+			app:touchAnchorId="@id/pizzaImg_4"
 			/>
 
 	</Transition>
@@ -74,7 +74,7 @@
 		>
 
 		<OnSwipe app:dragDirection="dragLeft"
-			app:touchAnchorId="@id/pizza4"
+			app:touchAnchorId="@id/pizzaImg_4"
 			/>
 
 	</Transition>
@@ -83,7 +83,7 @@
 	<!-- first and second visible -->
 	<ConstraintSet android:id="@+id/firstPos">
 
-		<Constraint android:id="@+id/pizza1"
+		<Constraint android:id="@+id/pizzaImg_1"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -94,19 +94,7 @@
 
 			/>
 
-		<Constraint android:id="@+id/name1"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16dp"
-
-			android:alpha="1"
-
-			app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
-			app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
-			app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
-			/>
-
-		<Constraint android:id="@+id/pizza2"
+		<Constraint android:id="@+id/pizzaImg_2"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -116,7 +104,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza1"
+			app:layout_constraintCircle="@id/pizzaImg_1"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="120"
 
@@ -131,7 +119,7 @@
 	<!-- first on the left second in center and third right -->
 	<ConstraintSet android:id="@+id/secondPos">
 
-		<Constraint android:id="@+id/pizza1"
+		<Constraint android:id="@+id/pizzaImg_1"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -141,7 +129,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza2"
+			app:layout_constraintCircle="@id/pizzaImg_2"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -151,7 +139,7 @@
 
 			/>
 
-		<Constraint android:id="@+id/pizza2"
+		<Constraint android:id="@+id/pizzaImg_2"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -162,19 +150,7 @@
 
 			/>
 
-		<Constraint android:id="@+id/name2"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16dp"
-
-			android:alpha="1"
-
-			app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
-			app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
-			app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
-			/>
-
-		<Constraint android:id="@+id/pizza3"
+		<Constraint android:id="@+id/pizzaImg_3"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -184,7 +160,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza2"
+			app:layout_constraintCircle="@id/pizzaImg_2"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="120"
 
@@ -194,12 +170,12 @@
 
 			/>
 
-		<Constraint android:id="@+id/pizza4"
+		<Constraint android:id="@+id/pizzaImg_4"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza2"
+			app:layout_constraintCircle="@id/pizzaImg_2"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="120"
 
@@ -209,12 +185,12 @@
 
 			/>
 
-		<Constraint android:id="@+id/pizza5"
+		<Constraint android:id="@+id/pizzaImg_5"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza2"
+			app:layout_constraintCircle="@id/pizzaImg_2"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="120"
 
@@ -229,12 +205,12 @@
 	<!-- second on the left third in center and 4th right -->
 	<ConstraintSet android:id="@+id/thirdPos">
 
-		<Constraint android:id="@+id/pizza1"
+		<Constraint android:id="@+id/pizzaImg_1"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza3"
+			app:layout_constraintCircle="@id/pizzaImg_3"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -244,7 +220,7 @@
 
 			/>
 
-		<Constraint android:id="@+id/pizza2"
+		<Constraint android:id="@+id/pizzaImg_2"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -254,7 +230,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza3"
+			app:layout_constraintCircle="@id/pizzaImg_3"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -263,7 +239,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/pizza3"
+		<Constraint android:id="@+id/pizzaImg_3"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -273,19 +249,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/name3"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16dp"
-
-			android:alpha="1"
-
-			app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
-			app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
-			app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
-			/>
-
-		<Constraint android:id="@+id/pizza4"
+		<Constraint android:id="@+id/pizzaImg_4"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -295,7 +259,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza3"
+			app:layout_constraintCircle="@id/pizzaImg_3"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="120"
 
@@ -304,12 +268,12 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/pizza5"
+		<Constraint android:id="@+id/pizzaImg_5"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza3"
+			app:layout_constraintCircle="@id/pizzaImg_3"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="120"
 
@@ -323,12 +287,12 @@
 	<!-- third on right 4th in center 5th on left -->
 	<ConstraintSet android:id="@+id/fourthPos">
 
-		<Constraint android:id="@+id/pizza1"
+		<Constraint android:id="@+id/pizzaImg_1"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza4"
+			app:layout_constraintCircle="@id/pizzaImg_4"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -338,12 +302,12 @@
 
 			/>
 
-		<Constraint android:id="@+id/pizza2"
+		<Constraint android:id="@+id/pizzaImg_2"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza4"
+			app:layout_constraintCircle="@id/pizzaImg_4"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -352,7 +316,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/pizza3"
+		<Constraint android:id="@+id/pizzaImg_3"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -362,7 +326,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza4"
+			app:layout_constraintCircle="@id/pizzaImg_4"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -371,7 +335,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/pizza4"
+		<Constraint android:id="@+id/pizzaImg_4"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -381,19 +345,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/name4"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16dp"
-
-			android:alpha="1"
-
-			app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
-			app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
-			app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
-			/>
-
-		<Constraint android:id="@+id/pizza5"
+		<Constraint android:id="@+id/pizzaImg_5"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -403,7 +355,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza4"
+			app:layout_constraintCircle="@id/pizzaImg_4"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="120"
 
@@ -417,12 +369,12 @@
 	<!-- 4th and 5th visible -->
 	<ConstraintSet android:id="@+id/lastPos">
 
-		<Constraint android:id="@+id/pizza1"
+		<Constraint android:id="@+id/pizzaImg_1"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza5"
+			app:layout_constraintCircle="@id/pizzaImg_5"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -432,12 +384,12 @@
 
 			/>
 
-		<Constraint android:id="@+id/pizza2"
+		<Constraint android:id="@+id/pizzaImg_2"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza5"
+			app:layout_constraintCircle="@id/pizzaImg_5"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -446,12 +398,12 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/pizza3"
+		<Constraint android:id="@+id/pizzaImg_3"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
 
-			app:layout_constraintCircle="@id/pizza5"
+			app:layout_constraintCircle="@id/pizzaImg_5"
 			app:layout_constraintCircleRadius="500dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -460,7 +412,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/pizza4"
+		<Constraint android:id="@+id/pizzaImg_4"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -470,7 +422,7 @@
 			android:scaleX="0.7"
 			android:scaleY="0.7"
 
-			app:layout_constraintCircle="@id/pizza5"
+			app:layout_constraintCircle="@id/pizzaImg_5"
 			app:layout_constraintCircleRadius="300dp"
 			app:layout_constraintCircleAngle="240"
 
@@ -479,7 +431,7 @@
 			app:layout_constraintStart_toStartOf="parent"
 			/>
 
-		<Constraint android:id="@+id/pizza5"
+		<Constraint android:id="@+id/pizzaImg_5"
 			android:layout_width="250dp"
 			android:layout_height="250dp"
 			android:layout_marginTop="24dp"
@@ -488,19 +440,6 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			/>
-
-		<Constraint android:id="@+id/name5"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="16dp"
-
-			android:alpha="1"
-
-			app:layout_constraintTop_toBottomOf="@id/pizzaViewsBounds"
-			app:layout_constraintStart_toStartOf="@id/pizzaViewsBounds"
-			app:layout_constraintEnd_toEndOf="@id/pizzaViewsBounds"
-			/>
-
 
 	</ConstraintSet>
 
